# cytosim-6-2025-updated

./: CMakeLists.txt  README 2.md  README.md  example.cym  makefile  makefile.inc
cym/: arp23.cym  ashbya.cym  aster.cym  aster_couple.cym  aster_custom.cym  aster_dynamic.cym  aster_france.cym  aster_grafted.cym  aster_guided.cym  aster_pull.cym  aster_pull3D.cym  aster_tracker.cym  axon.cym  bacterial_chain.cym  baseball.cym  bead_aster.cym  bead_aster_cut.cym  beat.cym  bending.cym  bending1.cym  bending2.cym  bending3.cym  bipolar.cym  buckling.cym  buckling.cym.tpl  bundle_bind.cym  bundle_contract.cym  bundle_flux.cym  bundle_stretch.cym  bundle_uniaxial.cym  capture.cym  capture_amplified.cym  catastrophe_outside.cym  celegans_asters.cym  celegans_chromosomes.cym  celegans_positionning.cym  change.cym  chromosomes_beads.cym  chromosomes_only.cym  chromosomes_pack.cym  (+191 more)
cym/templates/: julio.cym.tpl  plasmid.cym.tpl  platelet.cym.tpl  ronen.cym.tpl
cytosim.xcodeproj/: project.pbxproj
doc/: index.md
doc/code/: doxygen.cfg  index.md  mainpage.md  objects.md  validation.md
doc/compile/: cygwin.md  dimensionality.md  index.md  linux.md  math_kernel_library.md  options.md  vectorization.md  wsl.md
doc/main/: credits.md  executables.md  faq.md  file_types.md  installation.md  movies.md  overview.md  run_slurm.md  runs.md  starter.md
doc/outreach/: installation1.md  installation2.md
doc/publications/: biblio.md  index.md
doc/rendering/: import-actin-ico.py  import-links.py  index.md
doc/sim/: commands.md  fiber_dynamics.md  fibers.md  index.md  numerical_precision.md  parameters.md  placement.md  preconditionning.md  report.md  steric.md  stochastic.md  units.md
doc/tutorials/: tuto_bipolarity.md  tuto_capture.md  tuto_contract2.md  tuto_contract3.md  tuto_introduction.md  tuto_polar_nematic.md  tuto_scans.md  tuto_self.md
python/: pyned.py
python/blender/: import-actin-sphere.py  index.md  remove-actin.py
python/bram/: get_chromosomes.py
python/cleanup/: cleanup.py  compactify.py  reduce.py  shrink.py
python/cortex/: make_histogram.py  plot_nematic_order.py  swangle_lib.py
python/endo/: plot_bead_height.py
python/look/: get_data.py  make_image.py  make_movie.py  make_page.py  plot_lengths.py  plot_wall.py  postconfig.py  read_config.py  simplify_config.py  tell.py
python/misc/: average_column.py  compare.py  cumquadfit.py  make.py  multi_views.py  opendiff.py  plot.py  plot_count.py  plot_cpu.py  read_sweet.py  rename.py
python/net/: cheat.txt  get_contraction.py  get_network.py  plot_bridges.py  plot_force.py  plot_interesections.py  plot_network.py  plot_ronen.py  plot_size.py  predict_binding.py  predict_network.py  ronen_labels.py  ronen_meta.py  ronen_plot.py  ronen_redo.py  ronen_score.py  screen_couple.py
python/old/: submit_lsf.py  submit_pbs.py
python/run/: continue.py  go_sim.py  go_sim_lib.py  make_config.py  patch_config.py  preconfig.py  start.py  stop.py  submit.py  submit_lsf.py  submit_one.py  submit_slurm.py
python/screen/: fork.cym.tpl  preconfig.py  screen.cym.tpl  screen.py  screen_force.py  screen_motor.py
python/spindle/: README.md  cheat-spindle.txt  get_parameters.py  plot_fiber_length.py  plot_spindle_length.py  plot_spindles.py
python/test/: battery_test.py
src/: CMakeLists.txt  bugs.md  index.md  todo.md
src/base/: CMakeLists.txt  array.h  assert_macro.h  backtrace.cc  backtrace.h  bitmap.cc  buddy.h  byteswap.h  exceptions.cc  exceptions.h  filepath.cc  filepath.h  filewrapper.cc  filewrapper.h  glossary.cc  glossary.h  inventoried.h  inventory.cc  inventory.h  iowrapper.cc  iowrapper.h  makefile.inc  messages.cc  messages.h  operator_new.cc  print_color.cc  print_color.h  property.cc  property.h  property_list.cc  property_list.h  rdtsc.h  signal_handlers.cc  signal_handlers.h  stream_func.cc  stream_func.h  time_date.cc  time_date.h  timer.h  tokenizer.cc  (+1 more)
src/disp/: CMakeLists.txt  display.cc  display.h  display1.cc  display1.h  display2.cc  display2.h  display3.cc  display3.h  display_color.cc  display_prop.cc  display_prop.h  fiber_disp.cc  fiber_disp.h  glapp.cc  glapp.h  grid_display.cc  grid_display.h  line_disp.cc  line_disp.h  makefile.inc  point_disp.cc  point_disp.h  view.cc  view.h  view_prop.cc  view_prop.h
src/gym/: CMakeLists.txt  fg_font.cc  fg_font.h  fg_font_data.cc  fg_stroke.cc  fg_stroke.h  fg_stroke_mono_roman.c  fg_stroke_roman.c  flute.h  gle.cc  gle.h  gle_legacy.cc  glfw.h  glut.h  gym_cap.cc  gym_cap.h  gym_check.cc  gym_check.h  gym_color.cc  gym_color.h  gym_color_list.cc  gym_color_list.h  gym_draw.cc  gym_draw.h  gym_flat.cc  gym_flat.h  gym_flute.cc  gym_flute.h  gym_flute_dim.cc  gym_flute_dim.h  gym_image.cc  gym_image.h  gym_matrix.cc  gym_matrix.h  gym_menu.cc  gym_menu.h  gym_vect.cc  gym_vect.h  gym_view.cc  gym_view.h  (+12 more)
src/math/: CMakeLists.txt  SFMT-avx2.h  SFMT-common.h  SFMT-sse2.h  SFMT.c  SFMT.h  accumulator.h  allocator.h  bicgstab.h  blas.h  blinksort.h  cytoblas.h  dim.h  evaluator.h  fp_exceptions.cc  grid.h  isometry.h  lapack.h  lapack_fortran.h  linear_operator.h  makefile.inc  map.h  matfull.cc  matfull.h  matrix.cc  matrix.h  matrix11.cc  matrix11.h  matrix22.cc  matrix22.h  matrix33.cc  matrix33.h  matrix34.cc  matrix34.h  matrix44.h  modulo.cc  modulo.h  monitor.h  polygon.cc  polygon.h  (+53 more)
src/mesh/: mechoui.cc  mechoui_param.cc  mechoui_param.h  multimesh.cc  multimesh.h
src/misc/: check_dump.m  cytosim_development_code.m  cytosim_dump.m
src/play/: CMakeLists.txt  makefile.inc  monoplay.cc  multiplay.cc  play.cc  play_keys.cc  play_menus.cc  play_mouse.cc  player.cc  player.h  player_disp.cc  player_prop.cc  player_prop.h
src/sim/: CMakeLists.txt  bead.cc  bead.h  bead_set.cc  bead_set.h  chain.cc  chain.h  couple.cc  couple.h  couple_prop.cc  couple_prop.h  couple_set.cc  couple_set.h  cymdef.h  event.cc  event.h  event_set.cc  event_set.h  fiber.cc  fiber.h  fiber_grid.cc  fiber_grid.h  fiber_grid2.cc  fiber_prop.cc  fiber_prop.h  fiber_segment.cc  fiber_segment.h  fiber_set.cc  fiber_set.h  fiber_site.cc  fiber_site.h  field.cc  field.h  (+100 more)
(+300 files in other folders)
